--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
     <link href="./assets/css/normalize.css" rel="stylesheet">
     <link href="./assets/css/reset.css" rel="stylesheet">
     <link href="./assets/css/style.css" rel="stylesheet">
+    <link href="./assets/css/destaques.css" rel="stylesheet">
 </head>
 
 <body class="app">
@@ -16,7 +17,7 @@
     <main class="conteudo">
         <section class="destaques">
             <div class="destaques__principal caixa">
-                <h3 class="destaques__titulo">Fornite</h3>
+                <h3 class="destaques__titulo">Fortnite</h3>
             </div>
             <div class="destaques__secundario caixa">
                 <h3 class="destaques__titulo">PUBG</h3>
